--- a/src/main/resources/web/views/dialog.html
+++ b/src/main/resources/web/views/dialog.html
@@ -7,6 +7,12 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!--<script src="jar:file:/E:/Users/Josh/Dropbox/java_workspace/JServant/build/installShadow/JServant/lib/JavaServant-0.5.0-all.jar!/web/javascript/javabridge.js"></script>
+    -->
+    <script src="javabridge.js"></script>
+    <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="jservant.js"></script>
     <style>
         body{
             font:12px/15px Roboto, "Helvetica Neue", Helvetica, sans-serif;
@@ -44,22 +50,7 @@
         }
     </style>
 </head>
-<body>
-<script>
-function newAccount() {
-    var firstName = document.getElementById("firstname").value;
-    var lastName = document.getElementById("lastname").value;
-    var phone = document.getElementById("phone").value;
-    var email = document.getElementById("email").value;
-    AccountService.createAccount(firstName, lastName, phone, email);
-}
-
-var selectedScript = "(None)";
-function loadScript() {
-    selectedScript =  document.getElementById('scriptSelect').value;
-    javaServant.loadScript(selectedScript);
-}
-</script>
+<body ng-app="JServant" ng-controller="JServantCtrl">
 <div id="wrapper">
     <div class="dividerVertical"></div>
     <div class="main-form">
@@ -84,18 +75,23 @@ function loadScript() {
                         <input class="form-control" type="email" id="email" name="email" placeholder="Email">
                     </div>
                     -->
-                    <label for="scriptSelect">Select a script: </label>
                     <div class="form-group">
-                        <select class="form-control" id="scriptSelect"
-                                onchange="loadScript();">
+                        <label for="scriptSelect">Select a script: </label>
+                        <div class="divider"></div>
+                        <label for="scriptSelect" id="scriptName" name="scriptName"></label>
+                        <div class="divider"></div>
+                        <label for="scriptSelect" id="scriptStatus" name="scriptStatus" ng-model="currentScriptStatus">
+                            {{currentScriptStatus}}
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control" id="scriptSelect" onchange="loadScript();">
                             <option>(None)</option>
-                            <option>test.txt</option>
-                            <option>test2.txt</option>
                         </select>
                     </div>
                     <div class="form-group text-center">
                         <button class="btn btn-danger btn-lg" type="button" onclick="javaServant.stopScript();">Stop</button>
-                       <div class="divider"></div>
+                        <div class="divider"></div>
                         <button class="btn btn-info btn-lg" type="button" onclick="javaServant.runScript();">Run</button>
                     </div>
                 </div>
