--- a/src/main/web/css/jservant.css
+++ b/src/main/web/css/jservant.css
@@ -2,7 +2,7 @@
             font:12px/15px Roboto, "Helvetica Neue", Helvetica, sans-serif;
             background: linear-gradient(to bottom, rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%);
         }
-        select,
+        select
         input,
         .btn {
             font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -46,4 +46,9 @@
         }
         .running {
             color: #0101fb
+        }
+        ul,
+        li
+        {
+            list-style-type: none;
         }
